--- a/rrdf/DESCRIPTION
+++ b/rrdf/DESCRIPTION
@@ -6,10 +6,12 @@ Date: 2015-07-19
 Authors@R: c(person("Egon", "Willighagen", role = c("aut", "cre"),
   email = "egon.willighagen@gmail.com"),
   person("Carl", "Boettiger", role = "ctb"),
-  person("Ryan", "Kohl", role = "ctb"))
+  person("Ryan", "Kohl", role = "ctb"),
+  person("Davide", "Ceolin", role="ctb"))
 Author: Egon Willighagen [aut, cre],
   Carl Boettiger [ctb],
-  Ryan Kohl [ctb]
+  Ryan Kohl [ctb],
+  Davide Ceolin [ctb]
 Maintainer: Egon Willighagen <egon.willighagen@gmail.com>
 Depends: R (>= 2.0.0), rJava, rrdflibs (>= 1.4.0)
 Suggests: testthat
@@ -18,5 +20,5 @@ Description: Work with RDF data using the Jena (http://jena.apache.org) librarie
   new triples, and file IO in various formats.
 License: AGPL-3
 LazyLoad: yes
-URL: https://github.com/egonw/rrdf
-BugReports: https://github.com/egonw/rrdf/issues
+URL: https://github.com/davideceolin/rrdf
+BugReports: https://github.com/davideceolin/rrdf/issues
