--- a/rrdflibs/DESCRIPTION
+++ b/rrdflibs/DESCRIPTION
@@ -8,11 +8,14 @@ Authors@R: c(
       email = "egon.willighagen@gmail.com"),
     person("The Apache Software Foundation",
       role = c("ctb", "cph"),
-      comment = "Apache Jena")
+      comment = "Apache Jena"),
+    person("Davide", "Ceolin", role="ctb")
   )
+Author: Egon Willighagen [aut, cre],
+  Davide Ceolin [ctb]
 Maintainer: Egon Willighagen <egon.willighagen@gmail.com>
 Depends: R (>= 2.0.0), rJava
-Description: Package to provide the Jena 2.12.1 RDF libraries and Apache
+Description: Package to provide the Jena 3.0.0 RDF libraries and Apache
   HTTP Client libraries it depends on.
 Copyright: See file LICENSE and java/NOTICE
 License: Apache License (== 2.0)
