--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,1 +1,3 @@
-exportPattern("^[^\\.]")
+import("rJava")
+import("rrdflibs")
+export(add.data.triple, add.prefix, add.triple.fromStrings, combine.rdf, construct.rdf, construct.remote, load.rdf, new.rdf, save.rdf, sparql.rdf, sparql.remote, summarize.rdf, fromString.rdf, asString.rdf, remove.triple, remove.data.triple, tripleCount)
