--- a/rrdf/NAMESPACE
+++ b/rrdf/NAMESPACE
@@ -1,3 +1,3 @@
 import("rJava")
 import("rrdflibs")
-export(add.data.triple, add.prefix, add.triple.fromStrings, add.triple, combine.rdf, construct.rdf, create.blankNode, create.property, construct.remote, dump.rdf, load.rdf, new.rdf, save.rdf, sparql.rdf, sparql.remote, summarize.rdf, fromString.rdf, asString.rdf, remove.triple, remove.data.triple, tripleCount)
+export(add.data.triple, add.prefix, add.triple.fromStrings, add.triple, combine.rdf, construct.rdf, create.blankNode, create.property, create.resource, construct.remote, dump.rdf, load.rdf, new.rdf, save.rdf, sparql.rdf, sparql.remote, summarize.rdf, fromString.rdf, asString.rdf, remove.triple, remove.data.triple, tripleCount)
